===== CHANGELOG =====
Zollern Galaxy v2.0.39
=====================

[NEW]
* Added a config option to enable Mineshafts to spawn on Kronos.
    - Set to false by default.
* Added a config option to disable Sweet Foods giving Potion Effects.
* Added Azurite Ore gen to Kronos.
    - These ores will only spawn in Obsidian veins, and do not explode.
* Added fruit tree generation to Oasis.
* Added more biomes to Oasis.
* 

[CHANGES]
* Radite Ingots and Blocks can now be used inside of a Magma Crucible to make Radite Fluid.
* Registered fluids to the Ore Dictionary.
* Oil lakes will now generate on Oasis unless disabled in the config.
* Reworked Oasis biome decoration.
* Oasis' "Red Sea" ocean biome has been completely reworked and is now no longer completely flat under the water.
    - This is not perfect, but it is a step in the right direction.
* Increased amount of oxygen per tank tier.
* Oxygen Tanks from this mod are now craftable.
* ZG Village farms will now generate with Obsidian instead of Logs.
* 

[FIXES]
* Fixed Tlaloc Dungeon Chest having the wrong render texture (thank you MJRLegends).
* 